Remove fixed height for footer to correctly display all content on mobile devices

--- a/website/thaliawebsite/static/css/base.scss
+++ b/website/thaliawebsite/static/css/base.scss
@@ -242,7 +242,6 @@ footer {
     margin: 0;
     bottom: 0;
     width: 100%;
-    height: 80px;
 
     .divider {
         margin-left: .7rem;
